fix overflow x

--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
     --font-family-barlow: 'Barlow';
 
 }
-
+html{
+    overflow-x: hidden;
+}
 body, ul, li, p, a{
     font-size: 18px;
     font-family: var(--font-family-barlow);
